# new-project-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  json_schema.json  new-project  new_project.py  new_project_config.json  newproject.py  newproject_config.json  newproject_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: codecov.yaml  newproject-cli-tests.yaml
newproject/: _version.py  check.py  error_codes.py  error_logger.py  newproject.py  utils.py
newproject/config/: newproject_config.yaml
src/newproject/: newproject.py
tests/: test_newproject.py
