[tool.poetry]
name = "newproject-cli"
version = "0.1.0"
description = "Command-line tool to create new projects"
authors = ["utox39 <francescomoccaldi39@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
