[tool.poetry]
name = "newproject-cli"
version = "0.1.1"
description = "A command-line tool to create new projects"
authors = ["utox39 <francescomoccaldi39@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "newproject" }]
homepage = "https://github.com/utox39/new-project-cli"
repository = "https://github.com/utox39/new-project-cli"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[tool.poetry.scripts]
newproject = "newproject.newproject:main"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/utox39/new-project-cli/issues"


[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = ">=6.0"
jsonschema = ">=4.18.4"
rich = ">=13.4.2"
typer = ">=0.9.0"
typing_extensions = ">=4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
